--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-globe.gl": "^2.33.2",
     "react-scripts": "5.0.1",
+    "satellite.js": "^6.0.0",
     "solar-calculator": "^0.3.0",
     "three": "^0.176.0",
     "typescript": "^4.9.5",
